# TICK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE.md  README.md  TICK.jucer  build_ios.sh  build_linux.sh  build_mac.sh  build_projucer.bat  build_projucer.sh  build_projucer_linux.sh  build_win.bat  factory_default.preset  get_git_rev.py  index.html  run_ver_patch.bat  run_ver_patch.sh  startup.css
.github/: FUNDING.yml
Installer/: TICK.pkgproj  make_linux_installer.py  patch_installer_ver.py  restart_au_registrar.sh  tick_installer.iss
Installer/Factory/: Berlin.tickpreset  California.tickpreset  Hamburg.tickpreset  Hip Hop.tickpreset  Male Count.tickpreset  More Cow.preset  Rellingen.preset  Sync Pulse.tickpreset  Woodblock.tickpreset
Media/: about_text.txt
Media/Logo/: Tick AI file.ai
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Standalone.cpp  config.h
Source/components/: AboutView.h  DialogComponent.cpp  DialogComponent.h  EditBeatView.cpp  EditBeatView.h  LookAndFeel.cpp  LookAndFeel.h  ManageSamplesView.cpp  ManageSamplesView.h  PerformView.cpp  PerformView.h  PresetsView.cpp  PresetsView.h  TopBar.cpp  TopBar.h  TransportBar.cpp  TransportBar.h
Source/model/: AbletonLink.h  AbletonLink.mm  JsonState.cpp  JsonState.h  JuceState.h  TapModel.cpp  TapModel.h  TickModel.cpp  TickModel.h
Source/utils/: SamplesPaint.cpp  SamplesPaint.h  TickSplash.cpp  TickSplash.h  UtilityFunctions.cpp  UtilityFunctions.h  UtilityFunctions.mm  git_version.cpp  git_version.h
cmake/: gitversion.cmake
